# estacao-meteorologica-esp

./: .gitignore  CMakeLists.txt  Makefile  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  component.mk  config_symbols.h  embbeded_files.h  main.c  model.h  one_wire_hg_sensor.h  queue.h  rain_gauge.h  routes.h  utils_connect.h  utils_https.h
main/certs/: ca_cert.pem  ca_key.pem
main/webview/: configuration.html  index.html
main/webview/assets/css/: style.css
main/webview/assets/js/: configuration.js  index.js
