idf_component_register(SRCS "main.c"
                    INCLUDE_DIRS "."  
                    EMBED_TXTFILES  "certs/ca_cert.pem"
                                    "certs/ca_key.pem"
                                    "webview/index.html"
                                    "webview/configuration.html"
                                    "webview/assets/css/style.css"
                                    "webview/assets/js/index.js"
                                    "webview/assets/js/configuration.js"
)